# ketip

./: README.md  com.github.hahnavi.ketip.json  io.github.hahnavi.Ketip.json  meson.build  meson_options.txt
data/: com.github.hahnavi.ketip.appdata.xml.in  com.github.hahnavi.ketip.desktop.in  com.github.hahnavi.ketip.gschema.xml  io.github.hahnavi.Ketip.appdata.xml.in  io.github.hahnavi.Ketip.desktop.in  io.github.hahnavi.Ketip.gschema.xml  ketip.gresource.xml  meson.build
data/icons/: meson.build
data/ui/: service_row.ui  window.ui
po/: POTFILES  id.po  ketip.pot  meson.build
src/: app.vala  config.vapi  ketip.gresource.xml  main.vala  meson.build  service.vala  service_row.ui  service_row.vala  services_list_model.vala  systemd.vala  utils.vala  window.ui  window.vala
src/systemd/: manager.vala  properties.vala  unit.vala
